[package]
name = "hiredis-sys"
version = "0.0.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/hiredis-sys"
homepage = "https://github.com/stainless-steel/hiredis-sys"
documentation = "https://stainless-steel.github.io/hiredis-sys"
description = "The package provides bindings to Hiredis."
