[package]
name = "hiredis-sys"
version = "0.4.1"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides bindings to Hiredis."
documentation = "https://docs.rs/hiredis-sys"
homepage = "https://github.com/stainless-steel/hiredis-sys"
repository = "https://github.com/stainless-steel/hiredis-sys"
build = "build.rs"
links = "hiredis"

[dependencies]
libc = "0.2"
